--- a/PHPSite/css/bootstrap.css
+++ b/PHPSite/css/bootstrap.css
@@ -9,6 +9,7 @@ html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
+    background-image : 'background_classical.jpg';
 }
 body {
   margin: 0;
