--- a/PHPSite/css/style.css
+++ b/PHPSite/css/style.css
@@ -1,6 +1,8 @@
 body {
     min-height: 2000px;
     padding-top: 70px;
+    background-image:url('css/background_image.jpg');
+    background-repeat:no-repeat;
 }
 
 /* Featurettes
